# TSR

./: .gitignore  License.txt  LicenseReference.txt  README.md
Converters/: CMakeLists.txt
Converters/DisneyResearchLightFieldToMVE/: CMakeLists.txt  Main.cpp  Mvei.h  ReadMe.txt
SurfaceReconstruction/: CMakeLists.txt
SurfaceReconstruction/App/: CMakeLists.txt  MagicConstants.cpp  MagicConstants.h  Main.cpp  TSR.cpp  TSR.h
SurfaceReconstruction/SurfaceKernelColoring/: CMakeLists.txt  MagicConstants.cpp  MagicConstants.h  Main.cpp  SurfaceKernelColoring.cpp  SurfaceKernelColoring.h
SurfaceReconstruction/SurfaceReconstruction/: CMakeLists.txt
SurfaceReconstruction/SurfaceReconstruction/Geometry/: Edge.cpp  Edge.h  FlexibleMesh.cpp  FlexibleMesh.h  IFlexibleMeshObserver.h  IRayTracerObserver.h  IVertexChecker.h  IslesEraser.cpp  IslesEraser.h  Mesh.cpp  Mesh.h  RayTracer.cpp  RayTracer.h  StaticMesh.cpp  StaticMesh.h  Surfel.cpp  Surfel.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
SurfaceReconstruction/SurfaceReconstruction/Image/: ColorImage.cpp  ColorImage.h  DepthImage.cpp  DepthImage.h  Filter.cpp  Filter.h  Image.cpp  Image.h  MVEIHeader.cpp  MVEIHeader.h  ViewsImage.cpp  ViewsImage.h
SurfaceReconstruction/SurfaceReconstruction/Refinement/: FSSFParameters.cpp  FSSFParameters.h  FSSFRefiner.cpp  FSSFRefiner.h  FSSFStatistics.cpp  FSSFStatistics.h  MeshDijkstra.cpp  MeshDijkstra.h  MeshDijkstraParameters.cpp  MeshDijkstraParameters.h  MeshRefiner.cpp  MeshRefiner.h  RangedVertexIdx.cpp  RangedVertexIdx.h
SurfaceReconstruction/SurfaceReconstruction/Rendering/: MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h
SurfaceReconstruction/SurfaceReconstruction/Scene/: CameraData.cpp  CameraData.h  CapturedScene.cpp  CapturedScene.h  FileNaming.cpp  FileNaming.h  IReconstructorObserver.cpp  IReconstructorObserver.h  MVECameraIO.cpp  MVECameraIO.h  Samples.cpp  Samples.h  Scene.cpp  Scene.h  SyntheticScene.cpp  SyntheticScene.h  View.cpp  View.h
SurfaceReconstruction/SurfaceReconstruction/Scene/Camera/: CameraData.cpp  CameraData.h  Cameras.cpp  Cameras.h  MVECameraIO.cpp  MVECameraIO.h
SurfaceReconstruction/SurfaceReconstruction/Scene/Tree/: DualCells.cpp  DualCells.h  Leaves.cpp  Leaves.h  LeavesIterator.cpp  LeavesIterator.h  Nodes.cpp  Nodes.h  NodesChecker.h  NodesIterator.cpp  NodesIterator.h  Scope.cpp  Scope.h  SphereNodesChecker.cpp  SphereNodesChecker.h  Tree.cpp  Tree.h  TriangleNodesChecker.cpp  TriangleNodesChecker.h
SurfaceReconstruction/SurfaceReconstruction/Scene/View/: CameraData.cpp  CameraData.h  MVECameraIO.cpp  MVECameraIO.h  View.cpp  View.h
SurfaceReconstruction/SurfaceReconstruction/SurfaceExtraction/: ConeNodesChecker.cpp  ConeNodesChecker.h  DualMarchingCell.cpp  DualMarchingCell.h  DualMarchingCellTables.cpp  DualMarchingCells.cpp  DualMarchingCells.h  EdgeVertexIndex.cpp  EdgeVertexIndex.h  LineChecker.cpp  LineChecker.h  Occupancy.cpp  Occupancy.h  SphereNodeStatesChecker.cpp  SphereNodeStatesChecker.h  ViewConeNodesChecker.cpp  ViewConeNodesChecker.h
SurfaceReconstruction/SyntheticSceneEvaluation/: CMakeLists.txt  Evaluator.cpp  Evaluator.h  MagicConstants.cpp  MagicConstants.h  Main.cpp
SurfaceReconstruction/WorkingDirectory/Data/: App.cfg  SyntheticWedgeComplex.ply  SyntheticWedgeSimple.ply
SurfaceReconstruction/WorkingDirectory/Data/ExampleInputDataDescriptions/: Cameras.txt  InputData.txt  InputDataSynthetic.txt
SurfaceReconstruction/WorkingDirectory/Data/Shaders/: PNCFragmentShader.glsl  PNCVertexShader.glsl
